# corporation_financial_data_analysis

./: .gitignore  README.md  dbt_project.yml  docker-compose.yaml  profiles.yml  pyproject.toml
models/gold/: dim_clientes.sql  dim_departamentos.sql  dim_lojas.sql  dim_situacao.sql  dim_tipo_lancamento.sql  fat_pagamentos.sql  fat_recebimentos.sql  fat_titulos_pagamentos.sql  fat_titulos_recebimentos.sql  schema.yml
models/silver/: clientes_silver.sql  departamentos_silver.sql  lojas_silver.sql  schema.yml  titulos_silver.sql
seeds/bronze/: departamentos.csv  lojas.csv  schema.yml  titulos.csv
